# P2p-sharing

./: Cargo.toml  README.md
src/: file_manager.rs  keep_alive_manager.rs  lib.rs  message.rs  p2p_client.rs  p2p_tracker.rs  peer_to_peer.rs  peer_to_tracker.rs  peers_info_manager.rs  thread_communication_message.rs  types.rs
