[package]
name = "p2p-try0"
version = "0.1.0"
authors = ["luweiba <320501900@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3 = "0.9"
uuid = { version = "0.8", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
bendy = "0.3.3"
