[package]
name = "p2p-try0"
version = "0.1.0"
authors = ["luweiba <320501900@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3 = "0.9"
tokio = { version = "1", features = ["full"] }
bendy = "0.3.3"
structopt = "0.3"
log = "0.4.14"
env_logger = "0.8.3"